--- a/templates/base.html
+++ b/templates/base.html
@@ -18,14 +18,14 @@
     {% endblock %}
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+
     <!-- Owl Stylesheets -->
     <link href="{% static 'css/owl.carousel.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/owl.theme.default.min.css' %}" rel="stylesheet">
 
-    {% comment %}
+  
     <!-- Full Calendar Stylesheets -->
-    <link rel="stylesheet" href="{% static 'css/fullcalendar-core-main.min.css' %}">
-    {% endcomment %}
+    <link rel='stylesheet' type='text/css' href="{% static 'calendar_assets/fullcalendar/dist/fullcalendar.css' %}" />
 
     <!-- date range picker CSS -->
     <link rel="stylesheet" href="{% static 'css/daterangepicker.css' %}">
